--- a/views/settings.ejs
+++ b/views/settings.ejs
@@ -18,6 +18,22 @@
               <% } %>
             <label class="form-check-label" for="hideCompletedTasksId">Ocultar tareas completadas</label>  
         </div>
+       <!--  Código html/ejs para exportar notas -->
+        <div>
+         <!--  <button onclick="downloadText('txt')">download plain text file</button><br>
+          <button onclick="show('html')">show html file</button> -->
+
+          <form action="/settings/export" method="GET">
+            <select class="" name="exportTasks">
+            <option value="" disabled selected>Exporta a:</option>
+            <option value="txt">download plain text file</option>
+            <option value="html">show html file</option>
+            </select>
+            <p><input type="submit"></input>
+            </p>
+            </form>
+        </div>
+        <!-- FIN código html/ejs para exportar notas -->
     </div>
     <script src="/js/settings.js"></script>
 </body>
